App/deployments/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: systempc23/tickets
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
